fixed images alignment

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@
   }
 
   .publishing-content img {
+    padding-top: 5%;
     width: 20em;
   }
 
